@@ -100,10 +100,6 @@ MainWindow::MainWindow(void)
 
 	theDocument = new MapDocument(theLayers);
 	theView->setDocument(theDocument);
-	addAction(viewMoveLeftAction);
-	addAction(viewMoveRightAction);
-	addAction(viewMoveUpAction);
-	addAction(viewMoveDownAction);
 	theDocument->history().setActions(editUndoAction, editRedoAction, fileUploadAction);
 
 
@@ -768,29 +764,6 @@ void MainWindow::on_viewZoomOutAction_triggered()
 {
 	theView->projection().zoom(0.75, theView->rect().center(), theView->rect());
 	invalidateView();
-}
-
-void MainWindow::on_viewMoveLeftAction_triggered()
-{
-	QPoint p(theView->rect().width()/4,0);
-	theView->panScreen(p);
-}
-void MainWindow::on_viewMoveRightAction_triggered()
-{
-	QPoint p(-theView->rect().width()/4,0);
-	theView->panScreen(p);
-}
-
-void MainWindow::on_viewMoveUpAction_triggered()
-{
-	QPoint p(0,theView->rect().height()/4);
-	theView->panScreen(p);
-}
-
-void MainWindow::on_viewMoveDownAction_triggered()
-{
-	QPoint p(0,-theView->rect().height()/4);
-	theView->panScreen(p);
 }
 
 void MainWindow::on_viewZoomWindowAction_triggered()
